fix share window's 404... still behind mask
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@19688 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_annotations.scss
+++ b/src/main/resources/scss/_annotations.scss
@@ -229,9 +229,15 @@
 		color: $tertiary-grey;
 		padding: 0 0 0 25px;
 		//TODO: fix these references to use the spr_activity_icons.png sprite.
-		.comment & {	background: url(../images/activity-comment.png) 0 2px no-repeat;}
-		.highlight & {	background: url(../images/activity-highlight.png) 0 3px no-repeat;}
-		.note & {		background: url(../images/activity-note.png) 4px 0 no-repeat;}
+		.comment & {
+			@include icon('activity-comment', $left: 2px);
+		}
+		.highlight & {
+			@include icon('activity-highlight', $left: 3px);
+		}
+		.note & {
+			@include icon('activity-note', $left: 6px);
+		}
 	}
 }
 
